[package]
name = "cf-dynamic-best"
version = "0.1.3"
edition = "2021"
authors = ["Haoyun Qin <gyrojeff@foxmail.com>"]
license = "MIT"
description = "A tool to automatically select best Cloudflare IP for a Cloudflare DNS record"
homepage = "https://github.com/JeffersonQin/cloudflare-dynamic-best"
repository = "https://github.com/JeffersonQin/cloudflare-dynamic-best"
keywords = ["cli", "cloudflare", "dns", "ip"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.11.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11.18", features = ["json"] }
serde_yaml = "0.9.22"
csv = "1.2.2"
serde_json = "1.0.99"
chrono = "0.4.26"
colored = "2.0.0"
lettre = "0.10.4"
clap = { version = "4.3.10", features = ["derive"] }
